--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "dependencies": {
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "pg": "^8.6.0",
+        "pg-hstore": "^2.3.3",
+        "sequelize": "^6.6.2"
     }
 }
