--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
         "morgan": "^1.10.0",
+        "nodemailer": "^6.6.0",
         "pg": "^8.6.0",
         "pg-hstore": "^2.3.3",
-        "sequelize": "^6.6.2"
+        "sequelize": "^6.6.2",
+        "uuid-token-generator": "^1.0.0"
     }
 }
