--- a/src/.sequelizerc
+++ b/src/.sequelizerc
@@ -3,8 +3,8 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('config', 'db-config.js'),
+  'config': path.resolve('config', 'database.js'),
   'models-path': path.resolve('models'),
-  'seeders-path': path.resolve('seeders'),
-  'migrations-path': path.resolve('migrations')
+  'seeders-path': path.resolve('database', 'seeders'),
+  'migrations-path': path.resolve('database', 'migrations')
 };
