--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/worufu97/wowo-cinema-nodejs#readme",
     "dependencies": {
+        "cookie-session": "^1.4.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
         "morgan": "^1.10.0",
