--- a/src/.sequelizerc
+++ b/src/.sequelizerc
@@ -3,7 +3,7 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('config', 'database.js'),
+  'config': path.resolve('configs', 'database.js'),
   'models-path': path.resolve('models'),
   'seeders-path': path.resolve('database', 'seeders'),
   'migrations-path': path.resolve('database', 'migrations')
