--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "express-handlebars": "^5.3.2",
         "morgan": "^1.10.0",
         "nodemailer": "^6.6.0",
+        "passport": "^0.4.1",
+        "passport-facebook": "^3.0.0",
+        "passport-google-oauth": "^2.0.0",
         "pg": "^8.6.0",
         "pg-hstore": "^2.3.3",
         "sequelize": "^6.6.2",
