--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
         "method-override": "^3.0.0",
+        "moment": "^2.29.1",
         "morgan": "^1.10.0",
         "nodemailer": "^6.6.0",
         "passport": "^0.4.1",
