complete search function

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-URL_ROOT='http://localhost:3000'
+URL_ROOT='https://wowo-cinema.herokuapp.com'
 PORT=3000
 NODE_ENV='development'
 NODE_TLS_REJECT_UNAUTHORIZED=0
