add href connect between cinema and movie

--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
 URL_ROOT='https://wowo-cinema.herokuapp.com'
-PORT=3000
-NODE_ENV='development'
 NODE_TLS_REJECT_UNAUTHORIZED=0
 COOKIE_KEY='wolf'
 PROD_DB_USERNAME='jpjcivqlqwhtvu'
@@ -12,3 +10,4 @@ FB_CLIENT_ID='291613552511962'
 FB_CLIENT_SECRET='318e86e035f90fbb41f7fc48bf855945'
 GG_CLIENT_ID='807060967947-6ri60c34mo04bk8ccqpv39s19f55kmpi.apps.googleusercontent.com'
 GG_CLIENT_SECRET='7XXS8lgivaBliqY0Cmzr59eT'
+GG_API_KEY='AIzaSyAegihvkrCuA_VSrLZJatDN_ovZQydoXRU'
