complete user's part

--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
-URL_ROOT='https://wowo-cinema.herokuapp.com'
+URL_ROOT='http://localhost:3000'
 NODE_TLS_REJECT_UNAUTHORIZED=0
-COOKIE_KEY='wolf'
+COOKIE_KEY='demon'
+CRYPT_KEY='wolf'
+TWILIO_ACCOUNT_SID='ACe91d96ffcbcdd53519c1ffbc49c4179b'
+TWILIO_AUTH_TOKEN='4f7b6a180b8597901e956fac84e7d8d7'
+PAYPAL_CLIENT_ID='AZFSw1f52bVTFLvjn_0suweAgP3dWYc_hGhJEQG5kb49n-BahPcKSWiydex1TVeKByZdOj6V6PwtJCgg'
+PAYPAL_CLIENT_SECRET='EP98gHyxKPlSno-Q3XIcfh4hG1w_Derd6RSY_1EAZcK0mes1YflOYQMxZxThJMyNnnq4AWrdz7o71b78'
 FB_CLIENT_ID='291613552511962'
 FB_CLIENT_SECRET='318e86e035f90fbb41f7fc48bf855945'
 GG_CLIENT_ID='807060967947-6ri60c34mo04bk8ccqpv39s19f55kmpi.apps.googleusercontent.com'
