--- a/package.json
+++ b/package.json
@@ -23,20 +23,26 @@
     "dependencies": {
         "bcrypt": "^5.0.1",
         "cookie-session": "^1.4.0",
+        "cryptr": "^6.0.2",
         "dotenv": "^9.0.2",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
         "method-override": "^3.0.0",
         "moment": "^2.29.1",
         "morgan": "^1.10.0",
+        "node-fetch": "^2.6.1",
         "nodemailer": "^6.6.0",
+        "otplib": "^12.0.1",
         "passport": "^0.4.1",
         "passport-facebook": "^3.0.0",
         "passport-google-oauth": "^2.0.0",
+        "paypal-rest-sdk": "^1.8.1",
         "pg": "^8.6.0",
         "pg-hstore": "^2.3.3",
         "sequelize": "^6.6.2",
         "sequelize-cli": "^6.2.0",
+        "shortid": "^2.2.16",
+        "twilio": "^3.63.1",
         "uuid-token-generator": "^1.0.0"
     }
 }
