--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "paypal-rest-sdk": "^1.8.1",
         "pg": "^8.6.0",
         "pg-hstore": "^2.3.3",
+        "qrcode": "^1.4.4",
         "sequelize": "^6.6.2",
         "sequelize-cli": "^6.2.0",
         "shortid": "^2.2.16",
