--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ _URL_ROOT='https://wowo-cinema.herokuapp.com'
 _NODE_TLS_REJECT_UNAUTHORIZED=0
 _COOKIE_KEY='demon'
 _CRYPT_KEY='wolf'
-_TWILIO_ACCOUNT_SID='ACe91d96ffcbcdd53519c1ffbc49c4179b'
-_TWILIO_AUTH_TOKEN='fc023bcd1a459c055f69ddcc7236fd6a'
-_TWILIO_PHONE_NUMBER='+14753291996'
+_TWILIO_ACCOUNT_SID='AC6259905ad2c94aa9409e70e067d4c2b4'
+_TWILIO_AUTH_TOKEN='4eac8e3e7504c82659e98132a44ce65d'
+_TWILIO_PHONE_NUMBER='+14242342742'
 _PAYPAL_CLIENT_ID='AZFSw1f52bVTFLvjn_0suweAgP3dWYc_hGhJEQG5kb49n-BahPcKSWiydex1TVeKByZdOj6V6PwtJCgg'
 _PAYPAL_CLIENT_SECRET='EP98gHyxKPlSno-Q3XIcfh4hG1w_Derd6RSY_1EAZcK0mes1YflOYQMxZxThJMyNnnq4AWrdz7o71b78'
 _FB_CLIENT_ID='291613552511962'
@@ -12,6 +12,8 @@ _FB_CLIENT_SECRET='318e86e035f90fbb41f7fc48bf855945'
 _GG_CLIENT_ID='807060967947-6ri60c34mo04bk8ccqpv39s19f55kmpi.apps.googleusercontent.com'
 _GG_CLIENT_SECRET='7XXS8lgivaBliqY0Cmzr59eT'
 _GG_API_KEY='AIzaSyA7R4K3OrUipqS3BGuL6VVmluiQ8XFpBgU'
+_EMAIL_USER='wowocinema0@gmail.com'
+_EMAIL_PASSWORD='!Abc123456'
 _PROD_DB_USERNAME=''
 _PROD_DB_PASSWORD=''
 _PROD_DB_NAME=''
